<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/layout_bg"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ui.FirstActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_input_bg"
                android:hint="@string/user_name"
                android:paddingLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_input_bg"
                android:hint="@string/age"
                android:paddingLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/age"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_input_bg"
                android:hint="@string/job"
                android:paddingLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/job"
                android:layout_margin="10dp"
                android:background="@drawable/text_input_bg"
                android:padding="12dp"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/gender"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_group_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/female" />
                </RadioGroup>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="10dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"
                    android:elevation="10dp"
                    android:text="@string/show"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>